<resources>
    <string name="txt_ongoing_job">Urgent Jobs</string>
    <string name="app_name">Matchimi</string>
    <string name="guideline">Guideline</string>
    <string name="guide_txt_btn_prev">previous</string>
    <string name="guide_txt_btn_next">next</string>
    <string name="guide_txt_btn_start">start</string>
    <string name="guide_profile_title_1">Fill Compulsory Fields</string>
    <string name="guide_profile_title_2">Fill in your personal detail along with a clear photo of the and back of your IC</string>
    <string name="guide_job_title_1">Jobs</string>
    <string name="guide_job_title_2">Wait for your match, view job detail, and accept job offers.</string>
    <string name="guide_add_title_1">Add Available Timelots</string>
    <string name="guide_add_title_2">Indicate your available (repeated) date, time, and preferred locations.</string>
    <string name="guide_calendar_title_1">Calendar View of Schedule</string>
    <string name="guide_calendar_title_2">Manage your available timelots and jobs</string>
    <string name="facebook_app_id">1417927991768409</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="price_hour">$13/hr</string>
    <string name="date_working">Sat 24th, May</string>
    <string name="time_working">4pm - 11pm</string>
    <string name="address_working">Jumbo</string>
    <string name="place_working">Clark Quay</string>
    <string name="menu_jobs">jobs</string>
    <string name="menu_schedule">schedule</string>
    <string name="menu_profile">profile</string>
    <string name="menu_urgent_jobs">urgents</string>
    <string name="next">></string>
    <string name="close">Close</string>
    <string name="reply">Reply</string>
    <string name="menu_ongoing">Urgent Jobs</string>
    <string name="server_problem">Server long response. Please try again.</string>
    <string name="sending_message">Sending message ...</string>
    <string name="sending_message_success">Your message was sent succesfully</string>
    <string name="sending_message_failed">Failed to send message. Please try again</string>
    <string name="registration_header">Get Started</string>
    <string name="registration_description">Create a new profile or login to an existing profile below</string>
    <string name="registration_facebook">Use facebook</string>
    <string name="registration_email">Or, use your email</string>
    <string name="registration_input_email">Email</string>
    <string name="registration_input_password">Password</string>
    <string name="registration_forgot_password">Forgot Password</string>
    <string name="registration_submit">Submit</string>
    <string name="registration_profile_fullname">*Full Name</string>
    <string name="registration_profile_family_name">Full name</string>
    <string name="registration_profile_given_name">Given name</string>
    <string name="registration_profile_date_of_birth">*Date of Birth</string>
    <string name="registration_profile_gender">*Gender</string>
    <string name="registration_profile_nrictype">*NRIC Type</string>
    <string name="registration_profile_school">*School</string>
    <string name="registration_profile_add_nric_photos">*NRIC Type</string>
    <string name="registration_profile_addprofilephoto">Profile picture</string>
    <string name="registration_profile_skills">*Job Functions</string>
    <string name="registration_profile_work_experience">*Work Experience</string>
    <string name="registration_profile_addnricphotos">*Add NRIC Photos</string>
    <string name="registration_profile_addfrontphotos">FRONT</string>
    <string name="registration_profile_addbackphotos">BACK</string>
    <string name="registration_profile_phone_number">*Contact No.</string>
    <string name="registration_profile_failed">Failed create profile. Please try again.</string>
    <string name="registration_profile_title">Registration</string>
    <string name="registration_profile_progress">Creating your profile ...</string>
    <string name="registration_birthday_restriction">Minimum required age is 14 years old</string>
    <string name="registration_birthday_restriction_title">Date Birth Restriction</string>
    <string name="registration_failed">Failed. Your email may already registered"</string>
    <string name="resend_email_validation_success">Email validation has been sent.\nPlease check your email inbox.</string>
    <string name="resend_email_validation_failed">Email validation failed. Please try again</string>
    <string name="registration_already_exist">Your email already registered. Please use login</string>
    <string name="please_wait">Please wait ...</string>
    <string name="job_menu">Job</string>
    <string name="profile_header">Profile</string>
    <string name="profile_complete_question">Please complete your profile before accepting first job</string>
    <string name="profile_blocked_companies">Blocked Employers</string>
    <string name="profile_feedback">Feedback</string>
    <string name="cancel">Cancel</string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="hello_user">Hello %1$s!</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Successfully posted \'%1$s\'.\nPost ID: %2$s</string>
    <string name="error">Error</string>
    <string name="album_name">Matchimi</string>
    <string name="none_string"></string>
    <string name="details">Details</string>
    <string name="requirements">Requirements</string>
    <string name="mandatory">Mandatory</string>
    <string name="optional">Optional</string>
    <string name="review_reqs">Please review and accept the requirements below</string>
    <string name="review_reject_offer">If you dont want to get offers from this employer again, please check the box below. Otherwise leave in unchecked.\n\n(You can start accepting offer from this employer again if you remove them from your blocked merchants list in your profile).</string>
    <string name="dont_show_offer">Dont show offers from</string>
    <string name="anymore">anymore</string>
    <string name="mandatory_reqs">Mandatory Requirements:</string>
    <string name="optional_reqs">Optional Requirements:</string>
    <string name="accept_submit">Accept &amp; Submit</string>
    <string name="cancel_job_reason">Reasons</string>
    <string name="confirm_submit">Confirm &amp; Submit</string>
    <string name="reject_offer">Reject Offer</string>
    <string name="accept_offer">Accept Offer</string>
    <string name="job_accept_offer_progress">Accepting job ...</string>
    <string name="job_accept_offer_success">Job has been accepted successfuly</string>
    <string name="job_accept_offer_failed">Failed to accept job. Please try again</string>
    <string name="job_reject_offer_success">Offer has been rejected successfuly</string>
    <string name="job_reject_offer_failed">Failed to reject offer. Please try again</string>
    <string name="job_reject_progress">Rejecting job ...</string>
    <string name="cancel_offer">Cancel Job</string>
    <string name="cancel_availability">Cancel Job</string>
    <string name="cancel_note">Please note that canceling your availability for an accepted offer, is not taken well by employers.\n\nThis will demote your ranking for some time in the Matchimi system and others will be given preference over you when matching job offers.</string>
    <string name="cancel_reason">Reason for cancellation</string>
    <string name="cancel_my_availabliity">Cancel my job</string>
    <string name="create_availability">Create Availability</string>
    <string name="job_add_availability">Have more free time, add slot!</string>
    <string name="ill_keep_appoinment">I will keep this appointment</string>
    <string name="pas_job_info">Past job info</string>
    <string name="menu_history">Job History</string>
    <string name="menu_availability">Availability</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_help">Help</string>
    <string-array name="preferred_jobs">
        <item>Banquet Staff</item>
        <item>Bellboy</item>
        <item>Kitchen Crew</item>
        <item>Room Service</item>
        <item>Reception/Cust Service</item>
        
        <item>Waiter/Waitress</item>
        <item>Kitchen Crew</item>
        <item>Cashier</item>
        <item>Delivery/Rider</item>

        <item>Sales Assistant</item>
        <item>Cashier</item>

        <item>Packer</item>
        <item>Logistic Staff</item>
        
    </string-array>
    <string name="loading_preferred_jobs">Loading your preferred jobs ...</string>
    <string name="preferred_jobs_loading">Submiting your preferred jobs ...</string>
    <string name="menu_share">Share</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_submit">Submit</string>
    <string name="set">Set</string>
    <string name="availability_info">Once you add your availability, we will use this info to match you to offers from employers all over the island. You will get notified of these offers so you can accept them.</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="repeat">Repeat</string>
    <string name="location_preference">Location Preference</string>
    <string name="ask_salary">Ask Salary</string>
    <string name="availability_set_time">Set Time</string>
    <string name="availability_detail">Detail Availability</string>
    <string name="availability_adding_succesfully">Your availability has been added succesfully</string>
    <string name="availability_adding_failed">Failed to create availability. Please try again</string>
    <string name="availability_end_overlap">The selected time overlap with start time</string>
    <string name="availability_end_equal">End time must be not same with start time</string>
    <string name="availability_adding_overlap">Availability has been overlapped with existing</string>
    <string name="availability_error_passed">Selected time already passed.\nPlease choose a new date</string>
    <string name="availability_end_date_error">Selected date must be after start date</string>
    <string name="availability_end_time_error">Selected time must be after start time</string>
    <string name="edit_availability">Edit Availability</string>
    <string name="edit_availability_progress">Updating availability ...</string>
    <string name="edit_availability_failed">Failed to edit availability. Please try again</string>
    <string name="edit_availability_success">Availability updated succesfully</string>
    <string name="availability_select_date_validation">Please select your start date first</string>
    <string name="availability_select_time_start_validation">Please select your availability date</string>
    <string name="availability_select_time_end_validation">Please select your start time</string>
    <string name="availability_datetime_validation">Availability date and time.</string>
    <string name="delete_availability">Delete Availability</string>
    <string name="delete_availability_success">Availability has been deleted succesfully</string>
    <string name="register_fb">Create a new profile or use your facebook account</string>
    <string name="all_friends">All</string>
    <string name="create_availability_from">Available From</string>
    <string name="availability_start_repeat_date">Start Repeat Date</string>
    <string name="availability_end_repeat_date">End Repeat Date</string>
</resources>