<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_more"
        android:icon="@drawable/abs__ic_menu_moreoverflow_normal_holo_light"
        android:showAsAction="always"
        android:title="@string/none_string">
        <menu>
            <group android:id="@+id/menu_more_group" >
                <item
                    android:id="@+id/menu_history"
                    android:title="@string/menu_history"/>
                <item
                    android:id="@+id/menu_availability"
                    android:title="@string/menu_availability"/>
                <item
                    android:id="@+id/menu_setting"
                    android:title="@string/menu_setting"/>
                <item
                    android:id="@+id/menu_help"
                    android:title="@string/menu_help"/>
                <item
                    android:id="@+id/menu_share"
                    android:actionProviderClass="com.actionbarsherlock.widget.ShareActionProvider"
                    android:title="@string/menu_share"/>
                <item
                    android:id="@+id/menu_logout"
                    android:title="@string/menu_logout"/>
            </group>
        </menu>
    </item>

</menu>