<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="5dp" >

    <ImageView 
        android:id="@+id/imageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:scaleType="centerInside"
        android:contentDescription="@string/none_string" />
    
    <TextView
        android:id="@+id/textCenter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/imageView"
        android:layout_marginLeft="8dp"
        android:gravity="left"
        android:text="@string/app_name" >
    </TextView>

     <TextView
        android:id="@+id/textRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/bg_button_tab"
        android:text="@string/all_friends" />

</RelativeLayout>