<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/registration_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/registration_header"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white" />

    <ScrollView
        android:id="@+id/layScroll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" >

        <LinearLayout
            android:id="@+id/layBody"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/registration_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/register_fb"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/blue_gray" />

            <com.facebook.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="30dp" />

            <Button
                android:id="@+id/email_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@color/white"
                android:text="@string/registration_email"
                android:textColor="@color/blue_gray" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:background="@color/lines"
                android:orientation="horizontal" />

            <EditText
                android:id="@+id/registration_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registration_input_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/darktitle" />

            <EditText
                android:id="@+id/registration_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="@string/registration_input_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textColor="@color/darktitle" />

            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_accept_offer"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/registration_submit"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>