<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/createAvailabilityFrom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:background="@color/blue_sky"
            android:padding="5dp"
            android:text="@string/create_availability_from"
            android:textColor="@color/white"
            android:textSize="14dp" />

        <RelativeLayout
            android:id="@+id/layDate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="2dp" >

            <TextView
                android:id="@+id/labelRepeatStart"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:background="@drawable/button_white"
                android:paddingBottom="12dp"
                android:paddingLeft="16dp"
                android:paddingTop="12dp"
                android:text="@string/availability_start_repeat_date"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/labelRepeatEnd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/labelRepeatStart"
                android:layout_marginBottom="6dp"
                android:background="@drawable/button_white"
                android:paddingBottom="12dp"
                android:paddingLeft="16dp"
                android:paddingTop="12dp"
                android:text="@string/availability_end_repeat_date"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/dayRepeatList"
            android:layout_margin="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_white"
            android:orientation="vertical"
            android:paddingBottom="12dp"
            android:paddingLeft="16dp"
            android:paddingTop="12dp"
            android:textStyle="bold" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="12dp"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/buttonSet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="12dp"
                android:text="@string/set" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>