<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="10dp"
    android:paddingLeft="5dp"
    android:paddingRight="6dp"
    android:paddingTop="10dp" >

    <!-- <RelativeLayout -->
    <!-- android:id="@+id/layTop" -->
    <!-- android:layout_width="fill_parent" -->
    <!-- android:layout_height="wrap_content" > -->

    <TextView
        android:id="@+id/textPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/app_name" >
    </TextView>

    <LinearLayout
        android:id="@+id/jobs_schedule_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignRight="@+id/textPrice"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/date_working"
            android:textColor="#2D668E" >
        </TextView>

        <TextView
            android:id="@+id/textPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="right"
            android:text="@string/place_working"
            android:textColor="#8E9090" >
        </TextView>
    </LinearLayout>

    <!-- </RelativeLayout> -->


    <!-- <TextView -->
    <!-- android:id="@+id/textTimeLeft" -->
    <!-- android:layout_width="fill_parent" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_below="@+id/layTop" > -->
    <!-- </TextView> -->

</RelativeLayout>